[package]
name = "logdna-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = "0.3.12"
base32 = "0.4.0"
clap = { version = "3.1.0", features = ["derive"] }
directories = "4.0.1"
humantime = "2.1.0"
open = "2.1.2"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["json"] }
rpassword = "6.0.1"
rustls-native-certs = "0.6.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
time = "0.3.9"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.17.1"
url = "2.2.2"
